# uform

./: .gitignore  .pre-commit-config.yaml  .releaserc  BENCHMARKS.md  CITATION.cff  CONTRIBUTING.md  Package.resolved  Package.swift  README.md  cli.py  package-ci.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: package.json  prerelease.yml  python-publish.yml  release.yml  update_version.sh
docs/: benchmarks.rst  conf.dox  conf.py  contributing.rst  index.rst  reference.rst
docs/_static/: custom.css  custom.js
docs/javascript/: index.rst  reference.rst.txt
docs/python/: index.rst  reference.rst
docs/swift/: index.rst
javascript/: README.md  embeddings.mts  encoders.mjs  encoders.mts  encoders_test.js  encoders_test.ts  hub.mjs  index.mjs
python/: README.md
python/scripts/: bench.py  bench_decoders.py  bench_encoders.py  export.ipynb  export_decoders.ipynb  export_encoders.ipynb  test_decoders.py  test_embeddings.py  test_encoders.py
python/uform/: __init__.py  chat.py  gen_model.py  numpy_preprocessor.py  numpy_processors.py  onnx_encoders.py  onnx_models.py  preprocessing.py  shared.py  torch_decoders.py  torch_encoders.py  torch_models.py  torch_processors.py
scripts/: bench.py  example.py  test_embeddings.py  test_generative.py
src/: configs.py  gen_model.py  models.py  uform.py
src/uform/: __init__.py  chat.py  gen_model.py  models.py  numpy_preprocessor.py  onnx.py  setup_model.py  torch_models.py  torch_preprocessor.py
src/uform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/uform/models/: __init__.py  image_utils.py  triton.py  vlm.py
src/uform/models/encoders/: __init__.py  network_layers.py
src/uform/models/encoders/text/: __init__.py  block.py  encoder.py
src/uform/models/encoders/visual/: __init__.py  block.py  encoder.py
swift/: Embeddings.swift  EmbeddingsTests.swift  Encoders.swift  EncodersTests.swift  README.md
