[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "uform"
version = "0.2.1"
authors = [
  { name="Mikhail Kim", email="mike.kim@unum.cloud" },
  { name="Vladimir Orshulevich", email="vladimir.orshulevich@unum.cloud" },
]
maintainers = [
  { name="unum", email="info@unum.cloud" },
]
dependencies = [
  "transformers>=4.22.0",
  "timm>0.6.11",
]
description = "Multi-Modal Transformers library for Semantic Search and other Vision-Language tasks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",

    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",

    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: Korean",
    "Natural Language :: German",
    "Natural Language :: Italian",
    "Natural Language :: Polish",
    "Natural Language :: Spanish",
    "Natural Language :: Japanese",
    "Natural Language :: Russian",
    "Natural Language :: Turkish",
    "Natural Language :: Chinese (Simplified)",
]

[project.urls]
"Homepage" = "https://github.com/unum-cloud/uform"

[project.optional-dependencies]
remote = [
  "tritonclient[all]"
]