[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "uform"
version = "0.4.6"
authors = [
  { name="Mikhail Kim", email="mike.kim@unum.cloud" },
  { name="Vladimir Orshulevich", email="vladimir.orshulevich@unum.cloud" },
  { name="Ash Vardanian", email="ash.vardanian@unum.cloud" },
]
maintainers = [
  { name="Unum Cloud", email="info@unum.cloud" },
]
dependencies = [
  "torch>=1.13.1",
  "tokenizers>=0.13.3",
  "huggingface_hub>=0.16.4",
  "torchvision"
]
description = "Multi-Modal Transformers library for Semantic Search and other Vision-Language tasks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",

    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",

    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: Korean",
    "Natural Language :: German",
    "Natural Language :: Italian",
    "Natural Language :: Polish",
    "Natural Language :: Spanish",
    "Natural Language :: Japanese",
    "Natural Language :: Russian",
    "Natural Language :: Turkish",
    "Natural Language :: Chinese (Simplified)",
]

[project.urls]
"Homepage" = "https://github.com/unum-cloud/uform"

[project.optional-dependencies]
remote = [
  "tritonclient[all]"
]
ipu = [
  "poptorch"
]